# Copyright 2011 Free Software Foundation, Inc.
#
# This file is part of GNU Radio
#
# GNU Radio is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3, or (at your option)
# any later version.
#
# GNU Radio is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with GNU Radio; see the file COPYING.  If not, write to
# the Free Software Foundation, Inc., 51 Franklin Street,
# Boston, MA 02110-1301, USA.
install(FILES
    ofdm_uhd_transmitter.xml
	ofdm_ofdm_pilot_block_inserter.xml
	ofdm_fbmc_snr_filter.xml
	ofdm_snr_filter.xml
    ofdm_scatterplot_subcarrier_filter.xml
	ofdm_rx_rpc_manager.xml
	ofdm_fbmc_rms_amplifier.xml
	ofdm_fbmc_snr_estimator.xml
	ofdm_fbmc_postprocess_CTF_estimate.xml
	ofdm_pilot_block_filter.xml
	ofdm_frame_sampler.xml
	ofdm_fbmc_frame_sampler.xml
	ofdm_fbmc_pilot_block_filter.xml
    ofdm_pilot_subcarrier_filter.xml
    ofdm_ber_reference_source.xml
    ofdm_recursive_timing_metric.xml
    ofdm_accumulator_cc.xml
    ofdm_autocorrelator_stage1.xml
    ofdm_autocorrelator_stage2.xml
    ofdm_accumulator_ff.xml
    ofdm_autocorrelator0.xml
    fdm_autocorrelator.xml
    ofdm_ber_measurement.xml
    ofdm_bernoulli_bit_src.xml
    ofdm_bit_position_dependent_ber.xml
    ofdm_calc_metric.xml
    ofdm_channel_equalizer_mimo_2.xml
    ofdm_channel_equalizer_mimo_3.xml
    ofdm_channel_equalizer_mimo.xml
    ofdm_channel_equalizer.xml
    ofdm_channel_estimator_01.xml
    ofdm_channel_estimator_02.xml
    ofdm_coded_bpsk_soft_decoder.xml
    ofdm_compat_read_ber_from_imgxfer.xml
    ofdm_divide_frame_fc.xml
    ofdm_imgtransfer_sink.xml
    ofdm_imgtransfer_src.xml
    ofdm_imgtransfer_testkanal.xml
    ofdm_complex_to_arg.xml
    ofdm_complex_white_noise.xml
    ofdm_constellation_sample_filter.xml
    ofdm_CTF_MSE_enhancer.xml
    ofdm_cyclic_prefixer.xml
    ofdm_depuncture_bb.xml
    ofdm_depuncture_ff.xml
    ofdm_time_sync.xml
    ofdm_dynamic_trigger_ib.xml
    ofdm_extract_block_from_frame.xml
    ofdm_find_cir_shift.xml
    ofdm_frame_mux.xml
    ofdm_frequency_shift_vcc.xml
    ofdm_gate_ff.xml
    ofdm_generic_mapper_bcv.xml
    ofdm_generic_demapper_vcb.xml
    ofdm_generic_mapper_mimo_bcv.xml
    ofdm_generic_softdemapper_vcf.xml
    ofdm_int_skip.xml
    ofdm_interp_cir_set_noncir_to_zero.xml
    ofdm_limit_vff.xml
    ofdm_lms_fir_ff.xml
    ofdm_lms_phase_tracking.xml
    ofdm_lms_phase_tracking_02.xml
    ofdm_lms_phase_tracking_03.xml
    ofdm_ls_estimator_straight_slope.xml
    ofdm_mean_squared_error.xml
    ofdm_mm_frequency_estimator.xml
    ofdm_moms_cc.xml
    ofdm_moms_ff.xml
    ofdm_multiply_const_ccf.xml
    ofdm_multiply_const_ccf.xml
    ofdm_multiply_const_ii.xml
    ofdm_multiply_const_vcc.xml
    ofdm_multiply_frame_fc.xml
    ofdm_noise_nulling.xml
    ofdm_normalize_vcc.xml
    ofdm_peak_detector_02_fb.xml
    ofdm_peak_resync_bb.xml
    ofdm_pilot_subcarrier_inserter.xml
    ofdm_postprocess_CTF_estimate.xml
    ofdm_puncture_bb.xml
    ofdm_reassemble_ofdm_frame.xml
    ofdm_reference_data_source_ib.xml
    ofdm_reference_data_source_mimo_ib.xml
    ofdm_repetition_decoder_bs.xml
    ofdm_repetition_encoder_sb.xml
    ofdm_subc_snr_estimator.xml
    ofdm_scatterplot_sink.xml
    ofdm_schmidl_cfo_estimator.xml
    ofdm_schmidl_tm_rec_stage1.xml
    ofdm_schmidl_tm_rec_stage2.xml
    ofdm_sinr_estimator.xml
    ofdm_sinr_estimator_02.xml
    ofdm_sinr_interpolator.xml
    ofdm_skip.xml
    ofdm_snr_estimator.xml
    ofdm_sqrt_vff.xml
    ofdm_static_mux_c.xml
    ofdm_static_mux_v.xml
    ofdm_stc_decoder_rx0.xml
    ofdm_stc_decoder_rx1.xml
    ofdm_stc_encoder.xml
    ofdm_stream_controlled_mux_b.xml
    ofdm_stream_controlled_mux.xml
    ofdm_suppress_erasure_decision.xml
    ofdm_symbol_random_src.xml
    ofdm_throughput_measure.xml
    ofdm_trigger_surveillance.xml
    ofdm_vector_padding.xml
    ofdm_vector_mask.xml
    ofdm_vector_element.xml
    ofdm_vector_sampler.xml
    ofdm_vector_sum_vcc.xml
    ofdm_vector_sum_vff.xml
    ofdm_viterbi_combined_fb.xml
    ofdm_fsm.xml
    ofdm_itpp_tdl_channel.xml
    ofdm_encoder_bb.xml
    ofdm_reference_data_source_02_ib.xml
    ofdm_allocation_src.xml
    ofdm_allocation_buffer.xml
    ofdm_tx_mux_ctrl.xml
    ofdm_midamble_insert.xml 
    ofdm_fbmc_oqam_preprocessing_vcvc.xml
    ofdm_fbmc_oqam_postprocessing_vcvc.xml
    ofdm_fbmc_insert_preamble_vcvc.xml
    ofdm_fbmc_beta_multiplier_vcvc.xml
    ofdm_fbmc_separate_vcvc.xml
    ofdm_fbmc_polyphase_network_vcvc.xml
    ofdm_fbmc_overlapping_parallel_to_serial_vcc.xml
    ofdm_fbmc_overlapping_serial_to_parallel_cvc.xml
    ofdm_fbmc_pilot_block_inserter.xml
    ofdm_fbmc_vector_reshape_vcvc.xml
    ofdm_fbmc_vector_copy_vcvc.xml
    ofdm_fbmc_junction_vcvc.xml
    ofdm_fbmc_remove_preamble_vcvc.xml
    ofdm_fbmc_subchannel_processing_vcvc.xml
    ofdm_fbmc_weighted_spreading_vcvc.xml
    ofdm_fbmc_weighted_despreading_vcvc.xml
    ofdm_fbmc_channel_hier_cc.xml
    ofdm_fbmc_receiver_hier_cb.xml
    ofdm_fbmc_transmitter_hier_bc.xml
    ofdm_fbmc_symbol_estimation_vcb.xml
    ofdm_fbmc_symbol_creation_bvc.xml
    ofdm_fbmc_transmitter_demo.xml
    ofdm_fbmc_receiver_demo.xml
    ofdm_fbmc_asymmetrical_vector_padding_vcvc.xml
    ofdm_fbmc_transmitter_multiuser_bc.xml
    ofdm_fbmc_asymmetrical_vector_mask_vcvc.xml
    ofdm_fbmc_receiver_multiuser_cb.xml
    ofdm_scfdma_subcarrier_mapper_vcvc.xml
    ofdm_scfdma_transmitter_bc.xml
    ofdm_scfdma_subcarrier_demapper_vcvc.xml
    ofdm_scfdma_receiver_cb.xml
    ofdm_add_vcc.xml DESTINATION share/gnuradio/grc/blocks

)
